--- a/dogen-ap/functions/integration-tests/extensions/dogen-ap.env
+++ b/dogen-ap/functions/integration-tests/extensions/dogen-ap.env
@@ -1,4 +1,4 @@
 LOCATION=us-central1
 ADMIN_USER_EMAIL="foo@foo.com"
 WEBHOOK_VALIDATION_SALT="foo"
-DATABASE_ID="(default)
+FIRESTORE_DATABASE_ID="(default)
