--- a/dogen-ap/extension.yaml
+++ b/dogen-ap/extension.yaml
@@ -2,7 +2,7 @@
 # https://firebase.google.com/docs/extensions/reference/extension-yaml
 
 name: dogen-ap # Identifier for your extension
-version: 4.1.0 # Follow semver versioning
+version: 4.1.1 # Follow semver versioning
 specVersion: v1beta # Version of the Firebase Extensions specification
 
 # Friendly display name for your extension (~3-5 words)
@@ -43,7 +43,9 @@ roles:
   - role: aiplatform.user
     reason: Required to provide AI services in the Dogen client.
   - role: firebaserules.developer
-    reason: Required to configure Firestore Security Rules that grant authenticated Dogen admins appropriate access to the database. The Dogen web client operates as a registered Firebase application and respects all security rules.
+    reason: Required to configure Firestore Security Rules that grant authenticated Dogen admins appropriate access to the database. The Dogen web client operates as a registered Firebase application and respects all security rules. This will only be used if the ENABLE_DOGEN_SECURITY_RULES parameter is set to true.
+  - role: firebaserules.deployer
+    reason: Required to deploy Firestore and Storage Security Rules.  This will only be used if the ENABLE_DOGEN_SECURITY_RULES parameter is set to true.
 
 # Define external services the extension uses
 # Learn more in the docs:
