--- a/dogen-ap/functions/package.json
+++ b/dogen-ap/functions/package.json
@@ -12,17 +12,21 @@
     "test:storage": "./integration-tests/scripts/test-with-emulator.sh storage",
     "test:auth": "./integration-tests/scripts/test-with-emulator.sh authentication",
     "test:install": "./integration-tests/scripts/test-with-emulator.sh install",
+    "test:job": "./integration-tests/scripts/test-with-emulator.sh job",
     "test:watch": "npm run test:unit -- --watch"
   },
   "main": "lib/index.js",
   "dependencies": {
     "@google-cloud/storage": "^7.14.0",
     "@google-cloud/vertexai": "^1.9.0",
+    "@types/graphlib": "^2.1.12",
+    "async-mutex": "^0.5.0",
     "axios": "^1.6.2",
     "csv-parse": "^5.6.0",
     "csv-stringify": "^6.5.2",
     "firebase-admin": "^13.1.0",
     "firebase-functions": "^6.3.2",
+    "graphlib": "^2.1.8",
     "JSONStream": "^1.3.5",
     "typescript": "^5.7.3"
   },
