--- a/dogen-ap/functions/package.json
+++ b/dogen-ap/functions/package.json
@@ -13,6 +13,7 @@
     "test:auth": "./integration-tests/scripts/test-with-emulator.sh authentication",
     "test:install": "./integration-tests/scripts/test-with-emulator.sh install",
     "test:job": "./integration-tests/scripts/test-with-emulator.sh job",
+    "test:ai": "./integration-tests/scripts/test-with-emulator.sh ai",
     "test:watch": "npm run test:unit -- --watch"
   },
   "main": "lib/index.js",
@@ -20,6 +21,7 @@
     "@google-cloud/storage": "^7.14.0",
     "@google-cloud/vertexai": "^1.9.0",
     "@types/graphlib": "^2.1.12",
+    "ajv": "^8.17.1",
     "async-mutex": "^0.5.0",
     "axios": "^1.6.2",
     "csv-parse": "^5.6.0",
