--- a/dogen-ap/extension.yaml
+++ b/dogen-ap/extension.yaml
@@ -2,7 +2,7 @@
 # https://firebase.google.com/docs/extensions/reference/extension-yaml
 
 name: dogen-ap # Identifier for your extension
-version: 4.1.7 # Follow semver versioning
+version: 4.1.8 # Follow semver versioning
 specVersion: v1beta # Version of the Firebase Extensions specification
 
 # Friendly display name for your extension (~3-5 words)
@@ -29,6 +29,9 @@ billingRequired: true
 # required for your extension to operate.
 # Learn more in the docs:
 # https://firebase.google.com/docs/extensions/reference/extension-yaml#apis-field
+apis:
+  - apiName: aiplatform.googleapis.com
+    reason: Required to call Vertex AI generative models for text/image generation
 
 # In a `roles` field, list any IAM access roles required for your extension to operate.
 # Learn more in the docs:
