--- a/dogen-ap/functions/package.json
+++ b/dogen-ap/functions/package.json
@@ -22,6 +22,7 @@
     "@google-cloud/vertexai": "^1.9.0",
     "@types/graphlib": "^2.1.12",
     "ajv": "^8.17.1",
+    "ajv-formats": "^3.0.1",
     "async-mutex": "^0.5.0",
     "axios": "^1.6.2",
     "csv-parse": "^5.6.0",
